# agent-wallet

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
agent_wallet/: __init__.py  ledger.py  policy.py  pricing.py  pricing.yaml  wallet.py
agent_wallet/alerts/: __init__.py  base.py  discord.py  telegram.py  webhook.py
agent_wallet/cli/: __init__.py  cmd_history.py  cmd_pause.py  cmd_resume.py  cmd_status.py  cmd_wallets.py  main.py
agent_wallet/interceptors/: __init__.py  anthropic.py  google.py  ollama.py  openai.py
agent_wallet/killswitch/: __init__.py  base.py  discord.py  telegram.py  webhook.py
examples/: basic_anthropic.py  multi_wallet.py  telegram_killswitch.py  typescript_example.ts
tests/integration/: test_budget_enforcement.py
tests/unit/: test_alerts.py  test_cli.py  test_interceptors.py  test_ledger.py  test_policy.py  test_pricing.py  test_wallet.py
