[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sr-agent-wallet"
version = "0.1.0"
description = "Drop-in middleware that gives AI agents hard spending limits, token budgets, circuit breakers, and real-time kill switches."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "agent-wallet contributors" },
]
keywords = ["ai", "agent", "budget", "wallet", "llm", "cost", "spending"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
openai    = ["openai>=1.30"]
google    = ["google-generativeai>=0.7"]
telegram  = ["python-telegram-bot>=21.0"]
discord   = ["discord.py>=2.3"]
dev       = ["pytest", "mypy", "ruff", "pytest-cov", "freezegun"]

[project.scripts]
agent-wallet = "agent_wallet.cli.main:app"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
